Move output file in 210902 expt

--- a/experiments/210902-mash-Escherichia-genomes/210902-get-genomes.ipynb
+++ b/experiments/210902-mash-Escherichia-genomes/210902-get-genomes.ipynb
@@ -1421,7 +1421,7 @@
     "df2.index = range(1, df2.shape[0] + 1)\n",
     "df2.index.name = 'index'\n",
     "\n",
-    "df2.to_csv(intermediate_out / f'genomes.csv')"
+    "df2.to_csv(processed_out / f'{DATESTR}-mash-genomes-filtered.csv')"
    ]
   }
  ],
