Alter NB 220831_1-download-genomes

--- a/experiments/220831-theiagen-fungal-db/220831_1-download-genomes.ipynb
+++ b/experiments/220831-theiagen-fungal-db/220831_1-download-genomes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "772845e4-272f-456a-8712-a4a2c78388e2",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d41dda57-4797-4bf7-9c4f-6a5216ace8a2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "22a197c6-d6fb-4f2d-a65a-520319d8e531",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c766f2c3-bea5-477f-8413-8c97fa852074",
    "metadata": {},
    "outputs": [],
@@ -62,23 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "afb9fb80-2875-4c8f-980d-47e85e2cc42d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genomes_dir = Path('/home/jared/gambit/data/genomes/220831-candida/')\n",
-    "\n",
-    "fasta_dir = genomes_dir / 'fasta'\n",
-    "fasta_dir.mkdir(exist_ok=True)\n",
-    "\n",
-    "esummary_dir = genomes_dir / 'esummary'\n",
-    "esummary_dir.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9156f68c-96df-4f3f-83d8-7f566c7adcb6",
    "metadata": {},
    "outputs": [],
@@ -89,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a6ac6f10-6204-4c31-aea1-45a8010aecb2",
    "metadata": {},
    "outputs": [],
@@ -98,8 +82,13 @@
     "intermediate_data.mkdir(exist_ok=True)\n",
     "\n",
     "outfiles = dict(\n",
+    "    fasta=Path('/home/jared/gambit/data/genomes/220831-candida/fasta'),\n",
+    "    esummary=intermediate_data / 'esummary',\n",
     "    urls=intermediate_data / 'genome-urls.json',\n",
-    ")"
+    ")\n",
+    "\n",
+    "outfiles['fasta'].mkdir(exist_ok=True)\n",
+    "outfiles['esummary'].mkdir(exist_ok=True)"
    ]
   },
   {
@@ -112,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d677d91e-c093-424a-8304-d90bdf734235",
    "metadata": {},
    "outputs": [],
@@ -130,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "256b5110-8933-435b-a775-1b479a659ef8",
    "metadata": {},
    "outputs": [
@@ -138,13 +127,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 71/71 [00:00<00:00, 44033.06it/s]\n"
+      "100%|██████████| 71/71 [00:38<00:00,  1.87it/s]\n"
      ]
     }
    ],
    "source": [
     "for uid in tqdm(genomes['ncbi_uid']):\n",
-    "    file = esummary_dir / f'{uid}.xml'\n",
+    "    file = outfiles['esummary'] / f'{uid}.json'\n",
     "    if file.exists():\n",
     "        continue\n",
     "    \n",
@@ -165,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "594c64a0-5e57-4cb7-8c5a-01ff9fbd1fed",
    "metadata": {},
    "outputs": [],
@@ -192,12 +181,12 @@
    "id": "cc91406c-c145-4af1-86fb-2256b6efd183",
    "metadata": {},
    "source": [
-    "## Downloads"
+    "## Download sequence data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "308388cf-1745-4fd8-80a2-1b206e59a991",
    "metadata": {},
    "outputs": [
@@ -205,13 +194,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "71it [04:04,  3.45s/it]\n"
+      "71it [00:00, 42384.80it/s]\n"
      ]
     }
    ],
    "source": [
     "for row in tqdm(genomes.itertuples()):\n",
-    "    file = fasta_dir / (row.genbank_acc + '.fna.gz')\n",
+    "    file = outfiles['fasta'] / (row.genbank_acc + '.fna.gz')\n",
     "    if file.exists():\n",
     "        continue\n",
     "        \n",
